[project]
name = "twister"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "anytree",
  "colorama",
  "jsonschema",
  "junitparser",
  "natsort",
  "ply",
  "psutil",
  "pyelftools",
  "pykwalify",
  "pyserial",
  "pytest",
  "pyyaml",
  "tabulate",
]

# [build-system]
# requires = ["uv_build>=0.9.6"]
# build-backend = "uv_build"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.sdist]
# exclude = [
#   "twister/parsetab.py",
# ]

# [tool.hatch.build.targets.wheel]
# packages = ["twister", ""]

# [tool.uv.build-backend]
# module-name = "twister"
# module-root = ""
